// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attribute-update-compiler on compile multiple paths 1`] = `
"_reactivePaths['bar'] = _reactivePaths['bar'] || [];
_reactivePaths['bar'].push({
  update: state => {
    testElement.setAttribute('foo', 'test-template-string');
  }
});
_reactivePaths['foo'] = _reactivePaths['foo'] || [];
_reactivePaths['foo'].push({
  update: state => {
    testElement.setAttribute('foo', 'test-template-string');
  }
});"
`;

exports[`attribute-update-compiler on compile single path 1`] = `
"_reactivePaths['bar'] = _reactivePaths['bar'] || [];
_reactivePaths['bar'].push({
  update: state => {
    testElement.setAttribute('foo', 'test-template-string');
  }
});"
`;
